AM_CPPFLAGS = $(CXX17_FLAGS)
AM_CXXFLAGS = $(PICKY_CXXFLAGS)

noinst_LIBRARIES = libutil.a

libutil_a_SOURCES = \
	conversion.hh \
	exception.hh \
	timestamp.hh timestamp.cc \
	address.hh address.cc \
	serialization.hh serialization.cc \
	socket.hh socket.cc \
	udp_socket.hh udp_socket.cc \
	epoller.hh epoller.cc \
	matrix.hh \
	parse_cfg.hh
